test/golden/{helloCOLON,s}.golden

INITIALPATH:7:30: error:
    • String type is incompatible with grouping (_ or ,).

    • In the quasi-quotation: [fmt|{hello:,s}|]
  |
7 | main = putStrLn [fmt|{hello:,s}|]
  |                              ^
